--- a/site/pages/home.html
+++ b/site/pages/home.html
@@ -22,7 +22,25 @@
         <script type="text/javascript" src="//use.typekit.net/tjp2nro.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <link rel="stylesheet" href="assets/dragonfly.css" type="text/css">
+<a id="forkme_banner" href="https://github.com/Philipp-Neubauer/FFWD-Fish">View on GitHub</a>
 
+<style type="text/css">code{white-space: pre;}</style>
+<link rel="stylesheet"
+      href="home_files/highlight/default.css"
+      type="text/css" />
+<script src="home_files/highlight/highlight.js"></script>
+<style type="text/css">
+  pre:not([class]) {
+    background-color: white;
+  }
+</style>
+<script type="text/javascript">
+if (window.hljs && document.readyState && document.readyState === "complete") {
+   window.setTimeout(function() {
+      hljs.initHighlighting();
+   }, 0);
+}
+</script>
 
 
 <link rel="stylesheet" href="assets/style.css" type="text/css" />
@@ -35,7 +53,7 @@
 <header class="centered-navigation">
     <div class="centered-navigation-wrapper" data-section="index">
         <a href="./" class="mobile-logo">
-            <img src="assets/images/logo.jpg" alt>
+            <img src="./assets/images/logo.jpg" alt>
         </a>
         <a href class="centered-navigation-menu-button">
             <span class="icon-bar"></span>
@@ -47,8 +65,8 @@
         </a>
         <nav>
           <ul class="centered-navigation-menu">
-            <li class="nav-link" data-section="index" class="mobile-only"><a href="./">Home</a></li>
-            <li class="nav-link" data-section="people"><a href="./people">People</a></li>
+            <li class="nav-link" data-section="index" class="mobile-only"><a href="./home.html">Home</a></li>
+            <li class="nav-link" data-section="people"><a href="./people.html">People</a></li>
             <li class="nav-link" data-section="research"><a href="./blog">Blog</a></li>
             <li class="nav-link" data-section="publications"><a href="./publications">Publications</a></li>
             <li class="nav-link" data-section="maps"><a href="./maps">Maps</a></li>
@@ -68,7 +86,7 @@
 </div>
 
 
-<p><img src="images/bg.jpg" alt="hm" /></p>
+<p><img src="./assets/images/bg.jpg" alt="hm" /></p>
 
 
 
