css with syntax highlighting, first three posts online

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@ hero: true
 
 <h2>Welcome</h2>
 
-This is where I will blog about fish.
+This blog is an evolving documentation of my research into the effects of climate change on regional marine ecosystems and fisheries.What are common themes and key differences in ecosystem responses to climate change? I will post about modeling using size-spectra, and empirical work to support the development of these models.
 
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
